[package]
name = "astree_macro"
version = "0.1.0"
edition = "2021"
autotests = false
description = "Easily build AST from Rust structures"
license = "MIT"
# publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
syn = { version ="1.0.82", features=["full", "extra-traits"] }
astree_core = "0.*"
quote = "1.0.16"
convert_case = "0.6.0"
proc-macro2 = "1.0.36"
hatch_result = "0.1.4"
